--- a/src/Pages/components/footer.css
+++ b/src/Pages/components/footer.css
@@ -1,13 +1,14 @@
 .footer {
-    height: 220px;
+    height: 180px;
     background-color: rgb(37, 33, 33);
     color: whitesmoke;
     padding-top: 40px;
-    width: 95%;
-    margin-left: 2.5%;
+    width: 100%;
+    /* margin-left: 2.5%; */
     box-sizing: border-box;
     box-shadow: 1px 11px 9px 11px darkgrey;
     padding-left: 45px;
+    padding-right: 45px;
 }
 
 .equal {
@@ -20,9 +21,12 @@
     width: 50%;
     padding: 5px;
     margin-right: 4px;
-    height: 27px;
+    height: 30px;
     margin-top: 6.5px;
     font-weight: bold;
+    /* background: url('/favicon.ico') no-repeat 10px 5px;
+    background-size: 10px 10px; */
+    padding-right: 24px
 }
 
 ul {
@@ -64,7 +68,32 @@ ul {
 
 .contact {
     float: right;
-    margin-top: -78px;
+    margin-top: -82px;
     line-height: 17px;
     text-align: right;
+}
+
+.dem {
+    text-align: center
+}
+
+.dem > h1 {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin-bottom: -0.5rem;
+    font-size: 2.5rem;
+}
+
+p {
+    margin-bottom: 0rem;
+    padding: 0rem
+}
+
+.no-box {
+    border: none;
+    margin-top: -3px;
+}
+
+.hidden {
+    margin-top: -3px;
 }
