--- a/src/Pages/components/footer.css
+++ b/src/Pages/components/footer.css
@@ -2,7 +2,7 @@
     height: 180px;
     background-color: rgb(37, 33, 33);
     color: whitesmoke;
-    padding-top: 40px;
+    padding-top: 30px;
     width: 100%;
     /* margin-left: 2.5%; */
     box-sizing: border-box;
@@ -84,10 +84,6 @@ ul {
     font-size: 2.5rem;
 }
 
-p {
-    margin-bottom: 0rem;
-    padding: 0rem
-}
 
 .no-box {
     border: none;
@@ -96,4 +92,8 @@ p {
 
 .hidden {
     margin-top: -3px;
+}
+
+.fa {
+    margin: 0rem
 }
