--- a/src/Pages/components/style.css
+++ b/src/Pages/components/style.css
@@ -18,7 +18,8 @@
 }
 
 .modal-close {
-    margin: 0
+    margin: 0;
+    cursor: pointer
 }
 
 .model-content {
@@ -31,6 +32,7 @@
     padding-left: 50px;
     width: 50%;
     border-right: 2px solid darkgray;
+    height: 160px;
 }
 
 .modal-right {
